--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ##MYSQL
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=123123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ##JPA
