--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=123123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ##JPA
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql= true
